# polars-view

./: .gitignore  Cargo.toml  LICENSE  README.md  chart.txt  testes-sqls.txt
src/: args.rs  components.rs  container.rs  data.rs  data_container.rs  data_filter.rs  data_format.rs  decimal_and_layout_v1.rs  decimal_and_layout_v2.rs  error.rs  extension.rs  file_dialog.rs  file_extension.rs  file_info.rs  filters.rs  format.rs  layout.rs  lib.rs  main.rs  metadata.rs  polars.rs  sort.rs  sqls.rs  traits.rs
src/polars/: add.rs  drop.rs  format.rs  mod.rs  normalize.rs  remove.rs  replace.rs  transforms.rs
